22 Sep 2011: Wouter
	- dnssec-trigger-control reprobe command from the commandline.
	- dnssec-trigger-control hotspot_signon, forces insecure mode for
	  a sign-on.  The reprobe command can be used to stop forced_insecure.
	- added probe tcp80 and tcp443 as last resort.
	- retry for insecure and disconnect cases with exponential backoff,
	  start 10 seconds, max 24h.

21 Sep 2011: Wouter
	- ignore UDP without QR flag: some DNS caches send echoes of the query
	  back initially.  If we ignore them we catch a (100 msec later)
	  correct answer later.  (or timeout if no answer comes).
	- if probe is in progress it prints that in status.
	- if no DNS servers via DHCP it prints that in status.
	- antialiased fonts in windows native gui.

20 Sep 2011: Wouter
	- fix configure --with-gui, it did not change the gui but hooks.
	- refactor GUI panel SSL feed to be more portable.
	- fix stop command.
	- native windows GUI.
	- status 'dark' is now called 'nodnssec'.

19 Sep 2011: Wouter
	- fix so that if it cannot bind socket the server fails to start.
	- fix so that on OSX no zombie process remains.
	- kill -HUP performs a reload on UNIX. It only reload the strings
	  and that config, it keeps the running probe results and open
	  sockets to panels and certificates.
	- include pangorc, pango.modules, loaders.cache (for gdk) and
	  the pango-basic-win32.dll and gdk png loader dll (if present)
	  in the windows installer.
	- panel.exe uses the windows gui subsystem.  Include more pixloaders.
	- added fedora spec and init script.

16 Sep 2011: Wouter
	- fix OSX get of DHCP options to use ipconfig API instead of faulty
	  awk parse.

15 Sep 2011: Wouter
	- fix makefile dependencies for sed-ed output.
	- tag 0.3. (0.2 was distributed with different contents).
	- trunk has 0.4

14 Sep 2011: Wouter
	- icons in higher bitdepth, install and uninstall icons.
	- stoppanels control command for installers to update that panel exe.
	- tag 0.2
	- trunk has 0.3

13 Sep 2011: Wouter